# oca_monitor

./: .gitignore  README.md  TODO.md  cale_to_zlo.py  get_temperature.py  image_display.py  iter_async.py  oca_monit.py  oca_monit_tabs.py  oca_monit_telescopes.py  oca_monitor_bases.py  ocam.py  pyproject.toml  pyqt_web_test.py  settings.toml
Icons/: zb08
copy_scripts/: get_goes_sat_image.py
desktop/: tvroom.desktop
oca_monitor/: .gitignore  config.py  image_display.py  main.py  main_window.py  oca_monitor.py  paths.py  tab_config_dialog.py  utils.py
oca_monitor/controls/: __init__.py  light_point.py  panic_alarm.py  slide_checkbox.py  water_pump.py
oca_monitor/pages/: allsky.py  allsky_animation.py  allsky_animation_mpl.py  buttons_controlroom.py  buttons_kitchen.py  buttons_message_kitchen.py  buttons_message_screens.py  buttons_screens.py  buttons_tvroom.py  cameras.py  conditions.py  conditions_screens.py  ephemeris.py  example.py  jk15_ofp.py  message.py  quality_log.py  read_temp_battery.py  satellite_animation.py  site_status.py  telescope_ofp.py  telescopes.py  touch_buttons.py  touch_buttons_wbedroom.py  tvs_controlroom.py  water.py  weather.py  wind.py  wk06_ofp.py  zb08_ofp.py
oca_monitor/styles/: dark.py  light.py  white.py
oca_monitor/utils/: __init__.py  ephem_ocm.py
oca_monitor/widgets/: chart_kit.py
test/: reader_test.py
