[tool.poetry]
name = "oca_monitor"
version = "0.4.1"
description = "Flexible GUI for displaying telescopes and other OCM systems status"
license = "MIT"
authors = ["pwielgorski"]
readme = "README.md"
include = ["settings.toml", "oca_monitor/resources/icons/*"]


[tool.poetry.dependencies]
python = "^3.9, <3.12"
#paho-mqtt = "^1.6.1"

# pyqy6 is optional, because there is no such package for ARM
# to install it from PyPI on **other** platforms, use `poetry update --extras pyqt`
# on ARM follwo the instruction from the manual
#pyqt6 = {version="*",optional = true}
pyqt6 = {version="*"}
opencv-python = "*"
astropy = "*"
ephem = "^4.1.4"
matplotlib = "*"
requests = "^2.28.1"
serverish = {version="^1.1.0", extras=["messenger"]}
numpy = "^1.24.1, <1.26.0"
#numpy = "^1.26.4"  # this does not compile on RbPi
qasync = "^0.27.1"
dynaconf = "^3.2.4"
aiofiles = "^24.1.0"


[tool.poetry.extras]
pyqt = ["pyqt6"]

[tool.poetry.group.pyqt]
optional = true

[tool.poetry.group.pyqt.dependencies]
pyqt6 = "*"


[tool.poetry.scripts]
ocam_old = "oca_monit:main"
ocam = "oca_monitor.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
