[tool.poetry]
name = "oca_monitor"
version = "0.4.19" # Also change the version in oca_monitor_bases.py
description = "Flexible GUI for displaying telescopes and other OCM systems status"
license = "MIT"
authors = ["pwielgorski"]
readme = "README.md"
include = ["settings.toml", "oca_monitor/resources/icons/*"]


[tool.poetry.dependencies]
python = "^3.10, <3.14"
#paho-mqtt = "^1.6.1"

# pyqy6 is optional, because there is no such package for ARM
# to install it from PyPI on **other** platforms, use `poetry update --extras pyqt`
# on ARM follwo the instruction from the manual
#pyqt6 = {version="*",optional = true}
pyqt6 = {version="*"}
opencv-python = "*"
astropy = "*"
matplotlib = "*"
requests = "^2.33.1"
serverish = {version="^2.0.1", extras=["messenger"]}
qasync = "^0.28.0"
dynaconf = "^3.2.13"
aiofiles = "^25.1.0"
aiohttp = "^3.13.5"
numpy = [
  { version = "^2.4.4", python = ">=3.11" },
  { version = "^1.26", python = ">=3.10,<3.11" }
]
pyaraucaria = "^2.13.0"


[tool.poetry.extras]
pyqt = ["pyqt6"]

[tool.poetry.group.pyqt]
optional = true

[tool.poetry.group.pyqt.dependencies]
pyqt6 = "*"


[tool.poetry.scripts]
ocam_old = "oca_monit:main"
ocam = "oca_monitor.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
